configs changed, swagger auth added
